--- a/src/assets/scss/forms.scss
+++ b/src/assets/scss/forms.scss
@@ -23,7 +23,7 @@
     color: #1E1E1E;
     font-size: 16px;
     height: 48px;
-    padding: 16px;
+    // padding: 16px;
     border-radius: 12px;
     background-color: #F7FBFF;
 
